fixed an overflow bug

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -6,7 +6,6 @@
   font-size: $small-font-size;
   padding: ($spacing-unit / 10);
   margin: 0;
-  display: inline-block;
 }
 
 /**
